# course-scalpel

./: .gitignore  Makefile  course-scalpel.cabal  course-scalpel.nix  default.nix  scraper.cabal
cli/: Main.hs
cli/CourseScalpel/: Cli.hs
cli/CourseScalpel/Cli/: Internal.hs
markup/: course-tata65.html
src/: CourseScalpel.hs  Hlint.hs
src/CourseScalpel/: App.hs  Course.hs  CoursePage.hs  CourseProgram.hs  Credits.hs  Error.hs  Examination.hs  PageCourse.hs  Parser.hs  Parsing.hs  Program.hs  ProgramPage.hs  Time.hs  Web.hs
src/CourseScalpel/CoursePage/: Header.hs  Occasion.hs  Plan.hs  Programs.hs
src/CourseScalpel/Web/: Url.hs
test/CourseScalpel/: CoursePageSpec.hs  ListCourseSpec.hs  ProgramPageSpec.hs
test/CourseScalpel/CoursePage/: HeaderSpec.hs  OccasionSpec.hs  PlanSpec.hs  ProgramsSpec.hs
test/markup/: hours-minus-sign.html  hours.html
